@@ -18,13 +18,25 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TicketService {
+
+    private static final String CONDOMINIUM_ACCESS_ERROR_MESSAGE =
+            "Condominium not found or you don't have access";
+
+    private static final String TICKET_NOT_FOUND_MESSAGE = "Ticket not found";
+    private static final String AUTHENTICATED_USER_NOT_FOUND_MESSAGE = "Authenticated user not found";
+
+    private static final String INVALID_CLOSING_STATUS_MESSAGE =
+            "Invalid closing status. Must be RESOLVIDO, FECHADO, or CANCELADO";
+
+    private static final DateTimeFormatter CLOSING_DATE_FORMATTER =
+            DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss");
 
     private final TicketRepository ticketRepository;
     private final CondominiumRepository condominiumRepository;
@@ -39,10 +51,10 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         Condominium condominium = condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
         User creator = userRepository.findById(authenticatedUserId)
-                .orElseThrow(() -> new IllegalStateException("Authenticated user not found"));
+                .orElseThrow(() -> new IllegalStateException(AUTHENTICATED_USER_NOT_FOUND_MESSAGE));
 
         Ticket ticket = new Ticket();
         ticket.setTitle(dto.getTitle());
@@ -65,10 +77,12 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
-        List<Ticket> tickets = ticketRepository.findByCondominiumIdOrderByCreatedAtDesc(condominiumId);
-        return tickets.stream().map(this::mapToDTO).collect(Collectors.toList());
+        return ticketRepository.findByCondominiumIdOrderByCreatedAtDesc(condominiumId)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -76,10 +90,10 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
         Ticket ticket = ticketRepository.findByIdAndCondominiumId(ticketId, condominiumId)
-                .orElseThrow(() -> new IllegalArgumentException("Ticket not found"));
+                .orElseThrow(() -> new IllegalArgumentException(TICKET_NOT_FOUND_MESSAGE));
 
         return mapToDTO(ticket);
     }
@@ -91,10 +105,10 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
         Ticket ticket = ticketRepository.findByIdAndCondominiumId(ticketId, condominiumId)
-                .orElseThrow(() -> new IllegalArgumentException("Ticket not found"));
+                .orElseThrow(() -> new IllegalArgumentException(TICKET_NOT_FOUND_MESSAGE));
 
         ticket.setTitle(dto.getTitle());
         ticket.setDescription(dto.getDescription());
@@ -105,7 +119,6 @@ public class TicketService {
         ticket.setNotes(dto.getNotes());
         ticket.setEstimatedResolution(dto.getEstimatedResolution());
 
-        // Se o status for FECHADO ou RESOLVIDO, marcar closedAt
         if (dto.getStatus() == TicketStatus.FECHADO || dto.getStatus() == TicketStatus.RESOLVIDO) {
             ticket.setClosedAt(LocalDateTime.now());
         }
@@ -119,10 +132,10 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
         Ticket ticket = ticketRepository.findByIdAndCondominiumId(ticketId, condominiumId)
-                .orElseThrow(() -> new IllegalArgumentException("Ticket not found"));
+                .orElseThrow(() -> new IllegalArgumentException(TICKET_NOT_FOUND_MESSAGE));
 
         ticketRepository.delete(ticket);
     }
@@ -132,31 +145,40 @@ public class TicketService {
         UUID authenticatedUserId = securityContextHelper.getAuthenticatedUserId();
 
         condominiumRepository.findByIdAndUserHasAccess(condominiumId, authenticatedUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Condominium not found or you don't have access"));
+                .orElseThrow(() -> new IllegalArgumentException(CONDOMINIUM_ACCESS_ERROR_MESSAGE));
 
         Ticket ticket = ticketRepository.findByIdAndCondominiumId(ticketId, condominiumId)
-                .orElseThrow(() -> new IllegalArgumentException("Ticket not found"));
+                .orElseThrow(() -> new IllegalArgumentException(TICKET_NOT_FOUND_MESSAGE));
 
-        // Validar se o status é um status de encerramento válido
-        if (dto.getStatus() != TicketStatus.RESOLVIDO && 
-            dto.getStatus() != TicketStatus.FECHADO && 
-            dto.getStatus() != TicketStatus.CANCELADO) {
-            throw new IllegalArgumentException("Invalid closing status. Must be RESOLVIDO, FECHADO, or CANCELADO");
+        if (!isValidClosingStatus(dto.getStatus())) {
+            throw new IllegalArgumentException(INVALID_CLOSING_STATUS_MESSAGE);
         }
 
         ticket.setStatus(dto.getStatus());
         ticket.setClosedAt(LocalDateTime.now());
-        
-        // Se houver notas de encerramento, anexar às notas existentes
+
         if (dto.getClosingNotes() != null && !dto.getClosingNotes().isBlank()) {
             String existingNotes = ticket.getNotes() != null ? ticket.getNotes() : "";
-            String timestamp = LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss"));
-            ticket.setNotes(existingNotes + (existingNotes.isEmpty() ? "" : "\n\n") + 
-                           "[" + timestamp + "] " + dto.getClosingNotes());
+            String timestamp = LocalDateTime.now().format(CLOSING_DATE_FORMATTER);
+
+            ticket.setNotes(
+                    existingNotes
+                            + (existingNotes.isEmpty() ? "" : "\n\n")
+                            + "["
+                            + timestamp
+                            + "] "
+                            + dto.getClosingNotes()
+            );
         }
 
         Ticket closedTicket = ticketRepository.save(ticket);
         return mapToDTO(closedTicket);
+    }
+
+    private boolean isValidClosingStatus(TicketStatus status) {
+        return status == TicketStatus.RESOLVIDO
+                || status == TicketStatus.FECHADO
+                || status == TicketStatus.CANCELADO;
     }
 
     private TicketResponseDTO mapToDTO(Ticket ticket) {
@@ -173,15 +195,18 @@ public class TicketService {
         dto.setClosedAt(ticket.getClosedAt());
         dto.setCondominiumId(ticket.getCondominium().getId());
         dto.setCreatedById(ticket.getCreatedBy().getId());
+
         if (ticket.getAssignedTo() != null) {
             dto.setAssignedToId(ticket.getAssignedTo().getId());
         }
+
         dto.setNotes(ticket.getNotes());
         dto.setEstimatedResolution(ticket.getEstimatedResolution());
-        dto.setActivityIds(ticket.getActivities().stream().map(Activity::getId).collect(Collectors.toList()));
+        dto.setActivityIds(ticket.getActivities()
+                .stream()
+                .map(Activity::getId)
+                .toList());
+
         return dto;
     }
 }
-
-
-
